--- a/scss/style.sass
+++ b/scss/style.sass
@@ -1,6 +1,21 @@
+%flex
+  display: flex
+  justify-content: center
+  align-items: center
+
 .block
   padding: 0
   margin: 0
   color: #000
   &:hover
-    color: lighten(#000 15%)
+    color: lighten(#000, 15% )
+    text-decoration: none
+    text-transform: uppercase
+  &__text
+    margin-right: 15px
+    @extend %flex
+.nav-link
+  margin-right: 15px
+  text-decoration: none
+  @extend %flex
+  
