--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,11 @@
   margin-right: 15px;
 }
 
+.block__text:hover {
+  color: red;
+  text-decoration: underline;
+}
+
 .nav-link {
   margin-right: 15px;
   text-decoration: none;
