--- a/scss/style.sass
+++ b/scss/style.sass
@@ -14,6 +14,10 @@
   &__text
     margin-right: 15px
     @extend %flex
+    &:hover
+      color: red
+      text-decoration: underline
+      
 .nav-link
   margin-right: 15px
   text-decoration: none
