--- a/scss/style.sass
+++ b/scss/style.sass
@@ -16,10 +16,9 @@
     @extend %flex
     &:hover
       color: red
-      text-decoration: none
       
 .nav-link
   margin-right: 15px
   text-decoration: none
   @extend %flex
-  
+  padding-left: 0
