--- a/scss/style.sass
+++ b/scss/style.sass
@@ -15,7 +15,7 @@
     margin-right: 15px
     @extend %flex
     &:hover
-      color: red
+      color: green
       
 .nav-link
   margin-right: 15px
